<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background_patient"
    tools:context=".PatientRegistrationActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="30dp"
        android:orientation="vertical"
        android:background="@drawable/white_border"
        android:gravity="center">

        <!--name-->
        <android.support.design.widget.TextInputLayout
            android:id="@+id/TIL_name"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            app:errorEnabled="true"
            app:errorTextAppearance="@style/ErrorAppearance">
            <android.support.design.widget.TextInputEditText
                android:id="@+id/nameET"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:hint="@string/hint_name" />
        </android.support.design.widget.TextInputLayout>

        <!--email-->
        <android.support.design.widget.TextInputLayout
            android:id="@+id/TIL_email"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            app:errorEnabled="true"
            app:errorTextAppearance="@style/ErrorAppearance">
            <android.support.design.widget.TextInputEditText
                android:id="@+id/emailET"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_email"
                android:inputType="textEmailAddress" />
        </android.support.design.widget.TextInputLayout>

        <!--password-->
        <android.support.design.widget.TextInputLayout
            android:id="@+id/TIL_password"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true"
            app:errorEnabled="true"
            app:errorTextAppearance="@style/ErrorAppearance">
            <android.support.design.widget.TextInputEditText
                android:id="@+id/passwordET"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_password"
                android:inputType="textPassword" />
        </android.support.design.widget.TextInputLayout>

        <!--number-->
        <android.support.design.widget.TextInputLayout
            android:id="@+id/TIL_number"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            app:errorEnabled="true"
            app:errorTextAppearance="@style/ErrorAppearance">
            <android.support.design.widget.TextInputEditText
                android:id="@+id/numberET"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:hint="@string/hint_number"
                android:inputType="phone" />
        </android.support.design.widget.TextInputLayout>

        <TableRow
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <!--date of birth button-->
            <Button
                android:id="@+id/dateOfBirthBtn"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:onClick="showDatePickerDialog"
                android:text="@string/action_date_of_birth"
                android:background="@drawable/secondary_patient_button" />

            <!--selected date of birth-->
            <TextView
                android:id="@+id/showDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hint_DOB"
                android:layout_marginStart="30dp"/>

        </TableRow>

        <RadioGroup
            android:id="@+id/genderRG"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <TextView
                android:id="@+id/genderTV"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/prompt_gender" />

            <!--male-->
            <RadioButton
                android:id="@+id/maleRB"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="5dp"
                android:text="@string/action_male_radioBtn" />

            <!--female-->
            <RadioButton
                android:id="@+id/femaleRB"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/action_female_radioBtn" />
        </RadioGroup>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="10dp">

            <!--height-->
            <android.support.design.widget.TextInputLayout
                android:id="@+id/TIL_height"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                app:errorEnabled="true"
                app:errorTextAppearance="@style/ErrorAppearance">
                <android.support.design.widget.TextInputEditText
                    android:id="@+id/heightET"
                    android:layout_width="110dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:hint="@string/hint_height"
                    android:inputType="number" />
            </android.support.design.widget.TextInputLayout>

            <!--weight-->
            <android.support.design.widget.TextInputLayout
                android:id="@+id/TIL_weight"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                app:errorEnabled="true"
                app:errorTextAppearance="@style/ErrorAppearance">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/weightET"
                    android:layout_width="110dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="180dp"
                    android:hint="@string/hint_weight"
                    android:inputType="number" />
            </android.support.design.widget.TextInputLayout>

        </RelativeLayout>

        <Button
            android:id="@+id/confirmBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="100dp"
            android:background="@drawable/primary_patient_button"
            android:text="@string/action_confirm"
            android:textColor="#ffffff" />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>