<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background_doctor"
    tools:context=".DoctorRegistrationActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="30dp"
        android:background="@drawable/white_border"
        android:orientation="vertical"
        android:gravity="center">

        <!--<TextView-->
        <!--android:id="@+id/registration_title"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:text="@string/patient_register_title" />-->

        <!--name-->
        <android.support.design.widget.TextInputLayout
            android:id="@+id/TIL_name"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            app:errorEnabled="true"
            app:errorTextAppearance="@style/ErrorAppearance">
            <android.support.design.widget.TextInputEditText
                android:id="@+id/nameET"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:hint="@string/hint_name" />
        </android.support.design.widget.TextInputLayout>

        <!--email-->
        <android.support.design.widget.TextInputLayout
            android:id="@+id/TIL_email"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            app:errorEnabled="true"
            app:errorTextAppearance="@style/ErrorAppearance">
            <android.support.design.widget.TextInputEditText
                android:id="@+id/emailET"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_email"
                android:inputType="textEmailAddress" />
        </android.support.design.widget.TextInputLayout>

        <!--password-->
        <android.support.design.widget.TextInputLayout
            android:id="@+id/TIL_password"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true"
            app:errorEnabled="true"
            app:errorTextAppearance="@style/ErrorAppearance">
            <android.support.design.widget.TextInputEditText
                android:id="@+id/passwordET"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_password"
                android:inputType="textPassword" />
        </android.support.design.widget.TextInputLayout>

        <!--number-->
        <android.support.design.widget.TextInputLayout
            android:id="@+id/TIL_number"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            app:errorEnabled="true"
            app:errorTextAppearance="@style/ErrorAppearance">
            <android.support.design.widget.TextInputEditText
                android:id="@+id/numberET"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:hint="@string/hint_number"
                android:inputType="phone" />
        </android.support.design.widget.TextInputLayout>

        <!--sCode-->
        <android.support.design.widget.TextInputLayout
            android:id="@+id/TIL_sCode"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            app:errorEnabled="true"
            app:errorTextAppearance="@style/ErrorAppearance">
            <android.support.design.widget.TextInputEditText
                android:id="@+id/sCodeET"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:inputType="phone"
                android:hint="@string/hint_sCode" />
        </android.support.design.widget.TextInputLayout>

        <RadioGroup
            android:id="@+id/genderRG"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_margin="20dp">

            <TextView
                android:id="@+id/genderTV"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/prompt_gender" />

            <!--male-->
            <RadioButton
                android:id="@+id/maleRB"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="5dp"
                android:text="@string/action_male_radioBtn" />

            <!--female-->
            <RadioButton
                android:id="@+id/femaleRB"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/action_female_radioBtn" />
        </RadioGroup>

        <Button
            android:id="@+id/confirmBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="100dp"
            android:background="@drawable/primary_doctor_button"
            android:text="@string/action_confirm"
            android:textColor="#2E86C1" />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>